PBI 35611 fix issue that advanced search form is hidden underneath the schedule layer.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
@@ -39,7 +39,7 @@
 
 .dropdown {
 	position: absolute;
-	z-index: 1;
+	z-index: 115;
 	top: 5rem;
 	left: 0rem;
 
